# Flogger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: ansi_styling.f90  flogger.f90  flogger_formatter.f90  flogger_test.f90  formatter.f90
test/: test_flogger.f90  test_formatter.f90
